# Design-patterns-course

./: CMakeLists.txt  README.md
Adapter/: CMakeLists.txt
Adapter/inc/: Geometry.hpp
Adapter/src/: Geometry.cpp  main.cpp
Bridge/: CMakeLists.txt
Bridge/inc/: Renderer.hpp  Shape.hpp
Bridge/src/: Renderer.cpp  Shape.cpp  main.cpp
Builder/: CMakeLists.txt
Builder/inc/: CodeBuilder.hpp
Builder/src/: CodeBuilder.cpp  main.cpp
Chain_of_Responsibility/: CMakeLists.txt
Chain_of_Responsibility/src/: main.cpp
Command/: CMakeLists.txt
Command/inc/: Account.hpp
Command/src/: Account.cpp  main.cpp
Composite/: CMakeLists.txt
Composite/inc/: exercise.hpp
Composite/src/: exercise.cpp  main.cpp
Decorator/: CMakeLists.txt
Decorator/inc/: Flower.hpp
Decorator/src/: Flower.cpp  main.cpp
Factory/: CMakeLists.txt
Factory/inc/: Person.hpp
Factory/src/: Person.cpp  main.cpp
Flyweight/: CMakeLists.txt
Flyweight/inc/: Sentence.hpp
Flyweight/src/: Sentence.cpp  main.cpp
Interpreter/: CMakeLists.txt
Interpreter/inc/: ExpressionProcessor.hpp
Interpreter/src/: ExpressionProcessor.cpp  main.cpp
Iterator/: CMakeLists.txt
Iterator/inc/: Node.hpp
Iterator/src/: main.cpp
Mediator/: CMakeLists.txt
Mediator/src/: main.cpp
Memento/: CMakeLists.txt
Memento/inc/: TokenMachine.hpp
Memento/src/: TokenMachine.cpp  main.cpp
Observer/: CMakeLists.txt
Prototype/: CMakeLists.txt
Proxy/: CMakeLists.txt
Singleton/: CMakeLists.txt
State/: CMakeLists.txt
Strategy/: CMakeLists.txt
Template_Method/: CMakeLists.txt
Visitor/: CMakeLists.txt
(+27 files in other folders)
